fix:Align UI according to figma design

--- a/src/styles/Transaction.css
+++ b/src/styles/Transaction.css
@@ -1,6 +1,6 @@
 .transaction-container {
   width: 100%;
-  max-width: 768px;
+  max-width: 816px;
   min-height: 820px;
   display: flex;
   flex-direction: column;
@@ -8,56 +8,65 @@
   align-items: center;
   gap: 24px;
   text-align: center;
-  margin: 111px auto;
+  margin: 102.5px auto;
   padding: 36px 24px;
   border-radius: 16px;
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 .app-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  max-width: 768px;
   width: 100%;
-  height: auto;
+  gap: 24px;
+  height: 48px;
 }
 
 .app-header h1 {
-  width: 79px;
+  max-width: 545px;
   height: 31px;
+  line-height: 31px;
+  font-weight: 600;
   font-size: 20px;
-  line-height: 100%;
+  text-align: right;
+  color: #242d35;
 }
 
-.app-header .plus {
-  border: 1px solid white;
-  border-radius: 4px;
-  line-height: 1rem;
-  padding: 0px 4px;
-}
-
-.add-transaction-btn {
-  background: #3b82f6;
+.app-header .add-transaction-btn {
+  max-width: 199px;
+  height: 48px;
+  background: #0e33f3;
   color: white;
   border: none;
   border-radius: 8px;
-  padding: 12px 20px;
+  padding: 4px 24px;
   font-size: 14px;
   font-weight: 500;
   cursor: pointer;
   display: flex;
   align-items: center;
-  gap: 8px;
+  justify-content: center;
+  gap: 10px;
+}
+
+.add-transaction-btn .add-text {
+  max-width: 117px;
+  height: 31px;
+  font-weight: 400;
+  font-size: 20px;
 }
 
 .app-main {
-  width: 100%;
+  max-width: 768px;
+  min-height: 676px;
 }
 
 .desktop-view {
   display: block;
   width: 100%;
-  padding: 24px;
+  max-width: 768px;
 }
 
 .mobile-view {
@@ -65,19 +74,22 @@
 }
 
 .empty-state {
-  width: 700px;
+  max-width: 768px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 60px 20px;
+  padding: 60px 200px;
   text-align: center;
+  gap: 8px;
+  opacity: 80%;
   min-height: 400px;
+  color: #6B7580;
 }
 
 .transaction-table {
   width: 100%;
-  /* max-width: 768px; */
+  max-width: 768px;
   border-collapse: collapse;
   text-align: right;
 }
@@ -86,21 +98,23 @@
   padding: 16px;
   border-bottom: 1px solid #a0ccf8;
   font-weight: 500;
-  color: #333;
+  color: #6b7580;
 }
 
 .transaction-table td {
   padding: 14px 16px;
+  font-weight: 400;
+  font-size: 16px;
 }
 
 .income {
-  color: #2e7d32;
+  color: #3ebd93;
   font-weight: bold;
   direction: ltr;
 }
 
 .outcome {
-  color: #c62828;
+  color: #ef4e4e;
   font-weight: bold;
   direction: ltr;
 }
@@ -114,14 +128,51 @@
   font-size: 14px;
   transition: all 0.2s;
 }
-
 @media (max-width: 768px) {
   .transaction-container {
+    width: 90%;
+    min-height: 875px;
+  }
+  .transaction-table {
+    font-size: 14px;
+  }
+  .transaction-table th,
+  .transaction-table td {
+    padding: 12px;
+  }
+  .empty-state{
+    padding: 60px 150px;
+  }
+}
+
+@media (max-width: 480px) {
+  .transaction-container {
     width: 100%;
-    max-width: 332px;
+    max-width: 380px;
     margin: 16px;
-    padding: 16px;
-    min-height: 100vh;
+    min-height: 875px;
+  }
+
+  .app-header {
+    max-width: 332px;
+  }
+
+  .app-header h1 {
+    max-width: 109px;
+  }
+
+  .app-header .add-transaction-btn {
+    /* width: 199px; */
+    padding: 4px 20px;
+  }
+
+  .app-main {
+    width: 100%;
+    min-height: 731px;
+    gap: 8px; 
+    display: flex;   
+    flex-direction: column;
+    align-items: center;
   }
 
   .desktop-view {
@@ -130,14 +181,18 @@
 
   .mobile-view {
     display: block;
+    width: 100%;
+    max-width: 332px;
   }
 
-  .empty-state{
-    width: 100%;
+  .empty-state {
+    max-width: 332px;
+    padding: 60px 0px;
   }
 
   /* mobile style */
   .mobile-view .transaction-card {
+    width: 100%;
     background-color: #fbfbfc;
     border-radius: 8px;
     padding: 14px 16px;
@@ -152,6 +207,8 @@
     justify-content: space-between;
     align-items: center;
     gap: 50px;
+    color: #242d35;
+    font-weight: 500;
   }
 
   .mobile-view .card-description-action {
